## Vaucanson, a generic library for finite state machines.
## Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008 The Vaucanson Group.
##
## This program is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License
## as published by the Free Software Foundation; either version 2
## of the License, or (at your option) any later version.
##
## The complete GNU General Public Licence Notice can be found as the
## `COPYING' file in the root directory.
##
## The Vaucanson Group consists of people listed in the `AUTHORS' file.

nobase_include_HEADERS = 			\
vaucanson/standard_algorithms.hh		\
vaucanson/vaucanson.hh


nobase_include_HEADERS +=			\
vaucanson/config/system.hh			\
vaucanson/config/math.hh			\
vaucanson/config/pconf.hh

nobase_include_HEADERS +=			\
vaucanson/contexts/automaton.thh		\
vaucanson/contexts/boolean_semiring.thh		\
vaucanson/contexts/char_letter.thh		\
vaucanson/contexts/int_letter.thh		\
vaucanson/contexts/dynamic_alphabet.thh		\
vaucanson/contexts/free_monoid.thh		\
vaucanson/contexts/free_monoid_product.thh	\
vaucanson/contexts/generic_automaton_impl.thh	\
vaucanson/contexts/generic_series.thh		\
vaucanson/contexts/polynom_series.thh		\
vaucanson/contexts/r_semiring.thh		\
vaucanson/contexts/ratseries_semiring.thh	\
vaucanson/contexts/transducer.thh		\
vaucanson/contexts/z_max_plus_semiring.thh	\
vaucanson/contexts/z_min_plus_semiring.thh	\
vaucanson/contexts/z_semiring.thh 		\
vaucanson/contexts/automaton_functions.thh	\
vaucanson/contexts/automaton_maker.thh    	\
vaucanson/contexts/automaton_maker.thxx        	\
vaucanson/contexts/fmp_transducer_functions.thh \
vaucanson/contexts/fmp_transducer_maker.thh    	\
vaucanson/contexts/fmp_transducer_maker.thxx   	\
vaucanson/contexts/transducer_functions.thh	\
vaucanson/contexts/transducer_maker.thh        	\
vaucanson/contexts/transducer_maker.thxx

nobase_include_HEADERS +=			\
vaucanson/misc/bitset.hh			\
vaucanson/misc/bitset.hxx			\
vaucanson/misc/char_traits.hh			\
vaucanson/misc/char_traits.hxx			\
vaucanson/misc/constraints.hh			\
vaucanson/misc/container_ops.hh			\
vaucanson/misc/container_ops.hxx		\
vaucanson/misc/contract.hh			\
vaucanson/misc/deferrer.hh			\
vaucanson/misc/deferrer.hxx			\
vaucanson/misc/direction.hh			\
vaucanson/misc/escaper.hh			\
vaucanson/misc/escaper.hxx			\
vaucanson/misc/functors.hh			\
vaucanson/misc/functors.hxx			\
vaucanson/misc/global_timer.hh			\
vaucanson/misc/hash.hh				\
vaucanson/misc/hash.hxx				\
vaucanson/misc/iomanip.hh			\
vaucanson/misc/iomanip.hxx			\
vaucanson/misc/limits.hh			\
vaucanson/misc/misc.hh				\
vaucanson/misc/random.hh			\
vaucanson/misc/random.hxx			\
vaucanson/misc/self_iterator.hh 		\
vaucanson/misc/self_iterator.hxx 		\
vaucanson/misc/selectors.hh			\
vaucanson/misc/sparse_interval.hh		\
vaucanson/misc/sparse_interval.hxx		\
vaucanson/misc/special_char_traits.hh		\
vaucanson/misc/static.hh			\
vaucanson/misc/support.hh			\
vaucanson/misc/support.hxx			\
vaucanson/misc/timer.hh				\
vaucanson/misc/timer.hxx			\
vaucanson/misc/timer.cc				\
vaucanson/misc/timer_internal_gathering.hh 	\
vaucanson/misc/timer_internal_gathering.hxx 	\
vaucanson/misc/timer_internal_gathering.cc 	\
vaucanson/misc/timer_internal_graph.hh 		\
vaucanson/misc/timer_internal_graph.hxx		\
vaucanson/misc/timer_internal_graph.cc 		\
vaucanson/misc/bencher.hh			\
vaucanson/misc/bencher.hxx			\
vaucanson/misc/bencher.cc			\
vaucanson/misc/unique.hh			\
vaucanson/misc/unique.hxx			\
vaucanson/misc/usual_escaped_characters.hh	\
vaucanson/misc/usual_escaped_characters.hxx	\
vaucanson/misc/usual_macros.hh			\
vaucanson/misc/window.hh			\
vaucanson/misc/window.hxx

nobase_include_HEADERS +=			\
vaucanson/tools/automaton_tools.hh		\
vaucanson/tools/bencher.hh			\
vaucanson/tools/bencher.hxx			\
vaucanson/tools/dot_display.hh			\
vaucanson/tools/dot_display.hxx			\
vaucanson/tools/dot_dump.hh			\
vaucanson/tools/dot_dump.hxx			\
vaucanson/tools/dot_format.hh			\
vaucanson/tools/dot_format.hxx			\
vaucanson/tools/dumper.hh			\
vaucanson/tools/dumper.hxx			\
vaucanson/tools/fsm_dump.hh			\
vaucanson/tools/fsm_dump.hxx			\
vaucanson/tools/fsm_load.hh			\
vaucanson/tools/fsm_load.hxx			\
vaucanson/tools/gen_book.hh			\
vaucanson/tools/gen_book.hxx			\
vaucanson/tools/gen_random.hh			\
vaucanson/tools/gen_random.hxx			\
vaucanson/tools/io.hh				\
vaucanson/tools/io.hxx				\
vaucanson/tools/out_display.hh			\
vaucanson/tools/out_display.hxx			\
vaucanson/tools/simple_dump.hh			\
vaucanson/tools/simple_dump.hxx			\
vaucanson/tools/simple_format.hh		\
vaucanson/tools/simple_format.hxx		\
vaucanson/tools/usual_io.hh			\
vaucanson/tools/usual_io.hxx			\
vaucanson/tools/xml_display.hh			\
vaucanson/tools/xml_display.hxx			\
vaucanson/tools/xml_dump.hh			\
vaucanson/tools/xml_dump.hxx			\
vaucanson/tools/xml_load.hh			\
vaucanson/tools/xml_load.hxx

nobase_include_HEADERS +=				\
vaucanson/design_pattern/default_ops.hh			\
vaucanson/design_pattern/default_ops.hxx		\
vaucanson/design_pattern/design_pattern.hh		\
vaucanson/design_pattern/element.hh			\
vaucanson/design_pattern/element.hxx			\
vaucanson/design_pattern/element_op_traits.hh		\
vaucanson/design_pattern/element_ops.hh			\
vaucanson/design_pattern/element_ops.hxx		\
vaucanson/design_pattern/factory.hh			\
vaucanson/design_pattern/meta_element_root.hh		\
vaucanson/design_pattern/meta_element_root.hxx		\
vaucanson/design_pattern/predecls.hh			\
vaucanson/design_pattern/slots.hh			\
vaucanson/design_pattern/slots.hxx			\
vaucanson/design_pattern/structure.hh			\
vaucanson/design_pattern/structure.hxx			\
vaucanson/design_pattern/syntactic_decorator.hh		\
vaucanson/design_pattern/syntactic_decorator.hxx

nobase_include_HEADERS +=				\
vaucanson/algebra/concept/alphabets_base.hh		\
vaucanson/algebra/concept/alphabets_base.hxx		\
vaucanson/algebra/concept/freemonoid_base.hh		\
vaucanson/algebra/concept/freemonoid_base.hxx		\
vaucanson/algebra/concept/freemonoid_product.hh		\
vaucanson/algebra/concept/freemonoid_product.hxx	\
vaucanson/algebra/concept/freemonoid_product_base.hh	\
vaucanson/algebra/concept/freemonoid_product_base.hxx	\
vaucanson/algebra/concept/letter.hh			\
vaucanson/algebra/concept/letter.hxx			\
vaucanson/algebra/concept/monoid_base.hh		\
vaucanson/algebra/concept/monoid_base.hxx		\
vaucanson/algebra/concept/numerical_semiring.hh		\
vaucanson/algebra/concept/numerical_semiring.hxx	\
vaucanson/algebra/concept/semigroup_base.hh		\
vaucanson/algebra/concept/semigroup_base.hxx		\
vaucanson/algebra/concept/semiring_base.hh		\
vaucanson/algebra/concept/semiring_base.hxx		\
vaucanson/algebra/concept/series_base.hh		\
vaucanson/algebra/concept/series_base.hxx		\
vaucanson/algebra/concept/tropical_semiring.hh		\
vaucanson/algebra/concept/tropical_semiring.hxx

nobase_include_HEADERS +=							     \
vaucanson/algebra/implementation/alphabets/alphabets.hh				     \
vaucanson/algebra/implementation/alphabets/decorated_alphabet.hh		     \
vaucanson/algebra/implementation/alphabets/decorated_alphabet.hxx		     \
vaucanson/algebra/implementation/alphabets/predefs.hh				     \
vaucanson/algebra/implementation/alphabets/alphabet_set.hh			     \
vaucanson/algebra/implementation/alphabets/alphabet_set.hxx			     \
vaucanson/algebra/implementation/free_monoid/predefs.hh				     \
vaucanson/algebra/implementation/free_monoid/str_words.hh			     \
vaucanson/algebra/implementation/free_monoid/str_words.hxx			     \
vaucanson/algebra/implementation/free_monoid/tools.hh				     \
vaucanson/algebra/implementation/free_monoid/tools.hxx				     \
vaucanson/algebra/implementation/free_monoid/words.hh				     \
vaucanson/algebra/implementation/free_monoid/words.hxx				     \
vaucanson/algebra/implementation/free_monoid_product/freemonoid_product_pair_str.hh  \
vaucanson/algebra/implementation/free_monoid_product/freemonoid_product_pair_str.hxx \
vaucanson/algebra/implementation/letter/char_letter.hh				     \
vaucanson/algebra/implementation/letter/char_letter.hxx				     \
vaucanson/algebra/implementation/letter/couple_letter.hh			     \
vaucanson/algebra/implementation/letter/couple_letter.hxx			     \
vaucanson/algebra/implementation/letter/int_letter.hh				     \
vaucanson/algebra/implementation/letter/int_letter.hxx				     \
vaucanson/algebra/implementation/letter/range.hh				     \
vaucanson/algebra/implementation/letter/range.hxx				     \
vaucanson/algebra/implementation/predefs.hh					     \
vaucanson/algebra/implementation/semiring/numerical_semiring.hh			     \
vaucanson/algebra/implementation/semiring/numerical_semiring.hxx		     \
vaucanson/algebra/implementation/semiring/rational_number.hh			     \
vaucanson/algebra/implementation/semiring/rational_number.hxx			     \
vaucanson/algebra/implementation/semiring/tropical_semiring.hh			     \
vaucanson/algebra/implementation/semiring/tropical_semiring.hxx			     \
vaucanson/algebra/implementation/series/generalized.hh				     \
vaucanson/algebra/implementation/series/generalized.hxx				     \
vaucanson/algebra/implementation/series/krat.hh					     \
vaucanson/algebra/implementation/series/krat.hxx				     \
vaucanson/algebra/implementation/series/krat_coefficient.hh			     \
vaucanson/algebra/implementation/series/krat_coefficient.hxx			     \
vaucanson/algebra/implementation/series/krat_conversion.hh			     \
vaucanson/algebra/implementation/series/krat_conversion.hxx			     \
vaucanson/algebra/implementation/series/krat_exp_is_finite_app.hxx		     \
vaucanson/algebra/implementation/series/krat_exp_proxy.hh			     \
vaucanson/algebra/implementation/series/krat_exp_proxy.hxx			     \
vaucanson/algebra/implementation/series/krat_exp_parser.hh			     \
vaucanson/algebra/implementation/series/krat_exp_parser.hxx			     \
vaucanson/algebra/implementation/series/krat_exp_pattern.hh			     \
vaucanson/algebra/implementation/series/krat_exp_pattern.hxx			     \
vaucanson/algebra/implementation/series/krat_exp_support.hxx			     \
vaucanson/algebra/implementation/series/krat_exp_transpose.hxx			     \
vaucanson/algebra/implementation/series/polynoms.hh				     \
vaucanson/algebra/implementation/series/polynoms.hxx				     \
vaucanson/algebra/implementation/series/rat/depth_visitor.hh			     \
vaucanson/algebra/implementation/series/rat/depth_visitor.hxx			     \
vaucanson/algebra/implementation/series/rat/dispatch_visitor.hh			     \
vaucanson/algebra/implementation/series/rat/dispatch_visitor.hxx		     \
vaucanson/algebra/implementation/series/rat/dump_visitor.hh			     \
vaucanson/algebra/implementation/series/rat/dump_visitor.hxx			     \
vaucanson/algebra/implementation/series/rat/exp.hh				     \
vaucanson/algebra/implementation/series/rat/exp.hxx				     \
vaucanson/algebra/implementation/series/rat/hash_visitor.hh 			     \
vaucanson/algebra/implementation/series/rat/hash_visitor.hxx 			     \
vaucanson/algebra/implementation/series/rat/length_visitor.hh			     \
vaucanson/algebra/implementation/series/rat/length_visitor.hxx			     \
vaucanson/algebra/implementation/series/rat/nodes.hh				     \
vaucanson/algebra/implementation/series/rat/nodes.hxx				     \
vaucanson/algebra/implementation/series/rat/random_visitor.hh			     \
vaucanson/algebra/implementation/series/rat/random_visitor.hxx			     \
vaucanson/algebra/implementation/series/rat/reverse_visitor.hh			     \
vaucanson/algebra/implementation/series/rat/reverse_visitor.hxx			     \
vaucanson/algebra/implementation/series/rat/star_height_visitor.hh		     \
vaucanson/algebra/implementation/series/rat/star_height_visitor.hxx		     \
vaucanson/algebra/implementation/series/rat/xml_exp_visitor.hh			     \
vaucanson/algebra/implementation/series/rat/xml_exp_visitor.hxx			     \
vaucanson/algebra/implementation/series/series.hh				     \
vaucanson/algebra/implementation/series/series.hxx				     \
vaucanson/algebra/implementation/series/transpose.hh				     \
vaucanson/algebra/implementation/series/transpose.hxx

nobase_include_HEADERS +=			\
vaucanson/algebra/algebra.hh

nobase_include_HEADERS +=					\
vaucanson/algorithms/accessible.hh				\
vaucanson/algorithms/accessible.hxx				\
vaucanson/algorithms/aci_canonical.hh				\
vaucanson/algorithms/aci_canonical.hxx				\
vaucanson/algorithms/aut_to_exp.hh				\
vaucanson/algorithms/aut_to_exp.hxx				\
vaucanson/algorithms/berry_sethi.hh				\
vaucanson/algorithms/berry_sethi.hxx				\
vaucanson/algorithms/brzozowski.hh				\
vaucanson/algorithms/brzozowski.hxx				\
vaucanson/algorithms/complement.hh				\
vaucanson/algorithms/complement.hxx				\
vaucanson/algorithms/complete.hh				\
vaucanson/algorithms/complete.hxx				\
vaucanson/algorithms/composition_cover.hh			\
vaucanson/algorithms/composition_cover.hxx			\
vaucanson/algorithms/concatenate.hh				\
vaucanson/algorithms/concatenate.hxx				\
vaucanson/algorithms/cut_up.hh					\
vaucanson/algorithms/cut_up.hxx					\
vaucanson/algorithms/derived_term_automaton.hh			\
vaucanson/algorithms/derived_term_automaton.hxx			\
vaucanson/algorithms/determinize.hh				\
vaucanson/algorithms/determinize.hxx				\
vaucanson/algorithms/eps_removal.hh				\
vaucanson/algorithms/eps_removal.hxx				\
vaucanson/algorithms/eps_removal_sp.hh				\
vaucanson/algorithms/eps_removal_sp.hxx				\
vaucanson/algorithms/equivalent.hh				\
vaucanson/algorithms/equivalent.hxx				\
vaucanson/algorithms/eval.hh					\
vaucanson/algorithms/eval.hxx					\
vaucanson/algorithms/evaluation_fmp.hh				\
vaucanson/algorithms/evaluation_fmp.hxx				\
vaucanson/algorithms/extension.hh				\
vaucanson/algorithms/extension.hxx				\
vaucanson/algorithms/finite_support_conversion.hh		\
vaucanson/algorithms/finite_support_conversion.hxx		\
vaucanson/algorithms/fmp_to_rw.hh				\
vaucanson/algorithms/fmp_to_rw.hxx				\
vaucanson/algorithms/has_succ_comp.hh				\
vaucanson/algorithms/has_succ_comp.hxx				\
vaucanson/algorithms/image.hh					\
vaucanson/algorithms/image.hxx					\
vaucanson/algorithms/initial_derivation.hh			\
vaucanson/algorithms/initial_derivation.hxx			\
vaucanson/algorithms/internal/build_pattern.hh			\
vaucanson/algorithms/internal/build_pattern.hxx			\
vaucanson/algorithms/internal/evaluation.hh			\
vaucanson/algorithms/internal/evaluation.hxx			\
vaucanson/algorithms/internal/has_neighbour.hh			\
vaucanson/algorithms/internal/has_neighbour.hxx			\
vaucanson/algorithms/internal/outsplitting.hh			\
vaucanson/algorithms/internal/outsplitting.hxx			\
vaucanson/algorithms/internal/partial_rat_exp.hh		\
vaucanson/algorithms/internal/partial_rat_exp.hxx		\
vaucanson/algorithms/internal/partial_rat_exp_constant_term.hh	\
vaucanson/algorithms/internal/partial_rat_exp_constant_term.hxx	\
vaucanson/algorithms/internal/partial_rat_exp_derivation.hh	\
vaucanson/algorithms/internal/partial_rat_exp_derivation.hxx	\
vaucanson/algorithms/internal/skeleton.hh			\
vaucanson/algorithms/internal/skeleton.hxx			\
vaucanson/algorithms/invert.hh					\
vaucanson/algorithms/invert.hxx					\
vaucanson/algorithms/is_ambiguous.hh				\
vaucanson/algorithms/is_ambiguous.hxx				\
vaucanson/algorithms/is_deterministic.hh			\
vaucanson/algorithms/is_deterministic.hxx			\
vaucanson/algorithms/is_empty.hh				\
vaucanson/algorithms/is_empty.hxx				\
vaucanson/algorithms/is_letterized.hh				\
vaucanson/algorithms/is_letterized.hxx				\
vaucanson/algorithms/is_normalized.hh				\
vaucanson/algorithms/is_normalized.hxx				\
vaucanson/algorithms/isomorph.hh				\
vaucanson/algorithms/isomorph.hxx				\
vaucanson/algorithms/krat_exp_cderivation.hh			\
vaucanson/algorithms/krat_exp_cderivation.hxx			\
vaucanson/algorithms/krat_exp_constant_term.hh			\
vaucanson/algorithms/krat_exp_constant_term.hxx			\
vaucanson/algorithms/krat_exp_derivation.hh			\
vaucanson/algorithms/krat_exp_derivation.hxx			\
vaucanson/algorithms/krat_exp_expand.hh				\
vaucanson/algorithms/krat_exp_expand.hxx			\
vaucanson/algorithms/krat_exp_flatten.hh			\
vaucanson/algorithms/krat_exp_flatten.hxx			\
vaucanson/algorithms/krat_exp_linearize.hh			\
vaucanson/algorithms/krat_exp_linearize.hxx			\
vaucanson/algorithms/krat_exp_partial_derivation.hh		\
vaucanson/algorithms/krat_exp_partial_derivation.hxx		\
vaucanson/algorithms/krat_exp_realtime.hh			\
vaucanson/algorithms/krat_exp_realtime.hxx			\
vaucanson/algorithms/letter_to_letter_composition.hh		\
vaucanson/algorithms/letter_to_letter_composition.hxx		\
vaucanson/algorithms/minimization_hopcroft.hh			\
vaucanson/algorithms/minimization_hopcroft.hxx			\
vaucanson/algorithms/minimization_moore.hh			\
vaucanson/algorithms/minimization_moore.hxx			\
vaucanson/algorithms/normalized.hh				\
vaucanson/algorithms/normalized.hxx				\
vaucanson/algorithms/normalized_composition.hh			\
vaucanson/algorithms/normalized_composition.hxx			\
vaucanson/algorithms/product.hh					\
vaucanson/algorithms/product.hxx				\
vaucanson/algorithms/projection.hh				\
vaucanson/algorithms/projection.hxx				\
vaucanson/algorithms/domain.hh					\
vaucanson/algorithms/domain.hxx					\
vaucanson/algorithms/realtime.hh				\
vaucanson/algorithms/realtime.hxx				\
vaucanson/algorithms/realtime_decl.hh				\
vaucanson/algorithms/realtime_decl.hxx				\
vaucanson/algorithms/rw_composition.hh				\
vaucanson/algorithms/rw_composition.hxx				\
vaucanson/algorithms/rw_to_fmp.hh				\
vaucanson/algorithms/rw_to_fmp.hxx				\
vaucanson/algorithms/search.hh					\
vaucanson/algorithms/search.hxx					\
vaucanson/algorithms/standard.hh				\
vaucanson/algorithms/standard.hxx				\
vaucanson/algorithms/standard_of.hh				\
vaucanson/algorithms/standard_of.hxx				\
vaucanson/algorithms/sub_automaton.hh				\
vaucanson/algorithms/sub_automaton.hxx				\
vaucanson/algorithms/sub_normalize.hh				\
vaucanson/algorithms/sub_normalize.hxx				\
vaucanson/algorithms/sum.hh					\
vaucanson/algorithms/sum.hxx					\
vaucanson/algorithms/thompson.hh				\
vaucanson/algorithms/thompson.hxx				\
vaucanson/algorithms/transpose.hh				\
vaucanson/algorithms/transpose.hxx				\
vaucanson/algorithms/trim.hh					\
vaucanson/algorithms/trim.hxx

nobase_include_HEADERS +=						\
vaucanson/automata/concept/automata.hh					\
vaucanson/automata/concept/automata.hxx					\
vaucanson/automata/concept/automata_base.hh				\
vaucanson/automata/concept/automata_base.hxx				\
vaucanson/automata/concept/automata_kind.hh				\
vaucanson/automata/concept/automata_ops.hh				\
vaucanson/automata/concept/automata_ops.hxx				\
vaucanson/automata/concept/copy.hh					\
vaucanson/automata/concept/copy.hxx					\
vaucanson/automata/concept/delta_kind.hh				\
vaucanson/automata/concept/handlers.hh					\
vaucanson/automata/concept/handlers.hxx					\
vaucanson/automata/concept/history.hh					\
vaucanson/automata/concept/history.hxx					\
vaucanson/automata/concept/kinds.hh					\
vaucanson/automata/concept/kinds.hxx					\
vaucanson/automata/concept/smart_label.hh				\
vaucanson/automata/concept/smart_label.hxx				\
vaucanson/automata/concept/tags.hh					\
vaucanson/automata/concept/tags.hxx					\
vaucanson/automata/concept/transducer.hh				\
vaucanson/automata/concept/transducer.hxx				\
vaucanson/automata/concept/transducer_base.hh				\
vaucanson/automata/concept/transducer_base.hxx				\
vaucanson/automata/concept/transducer_ops.hh				\
vaucanson/automata/concept/transducer_ops.hxx				\
vaucanson/automata/concept/translate.hh					\
vaucanson/automata/concept/translate.hxx				\
vaucanson/automata/generic_contexts/boolean_automaton.hh		\
vaucanson/automata/generic_contexts/boolean_automaton_structures.hh     \
vaucanson/automata/generic_contexts/boolean_transducer.hh		\
vaucanson/automata/generic_contexts/boolean_transducer_structures.hh    \
vaucanson/automata/generic_contexts/fmp_transducer.hh			\
vaucanson/automata/generic_contexts/fmp_transducer_structures.hh        \
vaucanson/automata/generic_contexts/r_automaton.hh			\
vaucanson/automata/generic_contexts/r_automaton_structures.hh           \
vaucanson/automata/generic_contexts/z_automaton.hh			\
vaucanson/automata/generic_contexts/z_automaton_structures.hh           \
vaucanson/automata/generic_contexts/z_fmp_transducer.hh			\
vaucanson/automata/generic_contexts/z_fmp_transducer_structures.hh      \
vaucanson/automata/generic_contexts/z_max_plus_automaton.hh		\
vaucanson/automata/generic_contexts/z_max_plus_automaton_structures.hh  \
vaucanson/automata/generic_contexts/z_min_plus_automaton.hh		\
vaucanson/automata/generic_contexts/z_min_plus_automaton_structures.hh  \
vaucanson/automata/generic_contexts/z_transducer.hh 			\
vaucanson/automata/generic_contexts/z_transducer_structures.hh 		\
vaucanson/automata/generic_contexts/int_z_transducer.hh 		\
vaucanson/automata/generic_contexts/int_z_transducer_structures.hh 	\
vaucanson/automata/generic_contexts/int_boolean_automaton.hh		\
vaucanson/automata/generic_contexts/int_boolean_automaton_structures.hh \
vaucanson/automata/generic_contexts/int_boolean_transducer.hh		\
vaucanson/automata/generic_contexts/int_boolean_transducer_structures.hh    \
vaucanson/automata/generic_contexts/int_fmp_transducer.hh		\
vaucanson/automata/generic_contexts/int_fmp_transducer_structures.hh    \
vaucanson/automata/generic_contexts/int_z_automaton.hh			\
vaucanson/automata/generic_contexts/int_z_automaton_structures.hh       \
vaucanson/automata/generic_contexts/int_z_max_plus_automaton.hh		\
vaucanson/automata/generic_contexts/int_z_max_plus_automaton_structures.hh  \
vaucanson/automata/generic_contexts/int_z_min_plus_automaton.hh		\
vaucanson/automata/generic_contexts/int_z_min_plus_automaton_structures.hh  \
vaucanson/automata/generic_contexts/int_z_fmp_transducer.hh		\
vaucanson/automata/generic_contexts/int_z_fmp_transducer_structures.hh    \
vaucanson/automata/implementation/automaton_view.hh			\
vaucanson/automata/implementation/automaton_view.hxx			\
vaucanson/automata/implementation/bmig/bmig_functors.hh 		\
vaucanson/automata/implementation/bmig/bmig_functors.hxx 		\
vaucanson/automata/implementation/bmig/bmig_handlers.hh 		\
vaucanson/automata/implementation/bmig/bmig_handlers.hxx 		\
vaucanson/automata/implementation/bmig/bmig_handlers_op.hxx		\
vaucanson/automata/implementation/bmig/bmig_support.hh 			\
vaucanson/automata/implementation/bmig/bmig_support.hxx 		\
vaucanson/automata/implementation/bmig/edge_value.hh 			\
vaucanson/automata/implementation/bmig/edge_value.hxx 			\
vaucanson/automata/implementation/bmig/graphcontainer.hh 		\
vaucanson/automata/implementation/bmig/initial_container.hh 		\
vaucanson/automata/implementation/bmig/initial_value.hh 		\
vaucanson/automata/implementation/bmig/initial_value.hxx 		\
vaucanson/automata/implementation/bmig/iterator.hh 			\
vaucanson/automata/implementation/bmig/iterator.hxx 			\
vaucanson/automata/implementation/bmig/vgraph_container.hh 		\
vaucanson/automata/implementation/bmig/vgraph_container.hxx 		\
vaucanson/automata/implementation/bmig_graph_impl.hh 			\
vaucanson/automata/implementation/bmig_graph_impl.hxx			\
vaucanson/automata/implementation/bmig_graph_letters_spec.hh		\
vaucanson/automata/implementation/bmig_graph_letters_spec.hxx		\
vaucanson/automata/implementation/generalized.hh			\
vaucanson/automata/implementation/generalized.hxx			\
vaucanson/automata/implementation/geometry.hh				\
vaucanson/automata/implementation/geometry.hxx				\
vaucanson/automata/implementation/listg/iterator.hh 			\
vaucanson/automata/implementation/listg/iterator.hxx 			\
vaucanson/automata/implementation/listg/listg_handlers.hh 		\
vaucanson/automata/implementation/listg/listg_handlers.hxx 		\
vaucanson/automata/implementation/listg/listg_sparse_interval.hh 	\
vaucanson/automata/implementation/listg/listg_sparse_interval.hxx 	\
vaucanson/automata/implementation/listg_graph_impl.hh			\
vaucanson/automata/implementation/listg_graph_impl.hxx			\
vaucanson/automata/implementation/kind_adapter.hh			\
vaucanson/automata/implementation/kind_adapter.hxx			\
vaucanson/automata/implementation/transpose_view.hh			\
vaucanson/automata/implementation/transpose_view.hxx


nobase_include_HEADERS += 			\
vaucanson/xml/builders.hh			\
vaucanson/xml/builders.hxx			\
vaucanson/xml/contexts/fmp.hh			\
vaucanson/xml/contexts/fmp.hxx			\
vaucanson/xml/contexts/max_plus.hh		\
vaucanson/xml/contexts/max_plus.hxx		\
vaucanson/xml/contexts/min_plus.hh		\
vaucanson/xml/contexts/min_plus.hxx		\
vaucanson/xml/contexts/rw.hh			\
vaucanson/xml/contexts/rw.hxx			\
vaucanson/xml/handlers.hh			\
vaucanson/xml/handlers.hxx			\
vaucanson/xml/handlers_base.hh			\
vaucanson/xml/handlers_base.hxx			\
vaucanson/xml/ios.hh				\
vaucanson/xml/ios.hxx				\
vaucanson/xml/parsers.hh			\
vaucanson/xml/parsers.hxx			\
vaucanson/xml/printers.hh			\
vaucanson/xml/printers.hxx			\
vaucanson/xml/regexp.hh				\
vaucanson/xml/regexp.hxx			\
vaucanson/xml/strings.hh			\
vaucanson/xml/strings.hxx			\
vaucanson/xml/tools.hh				\
vaucanson/xml/tools.hxx				\
vaucanson/xml/xml_xerces_stream.hh 		\
vaucanson/xml/xml_xerces_stream.hxx		\
vaucanson/xml/xml_exp_visitor.hh		\
vaucanson/xml/xml_exp_visitor.hxx		\
vaucanson/xml/xmleq.hh				\
vaucanson/xml/xmleq.hxx				\
vaucanson/xml/XML.hh				\
vaucanson/xml/XML.hxx

include $(top_srcdir)/include/generic_contexts.mk
