SUBDIRS = vcsn-b vcsn-r vcsn-z vcsn-z-max vcsn-z-min \
	  vcsn-fmp-tdc vcsn-tdc vcsn-z-fmp-tdc vcsn-z-tdc

libvcsn-b:
	@$(MAKE) $(AM_MAKEFLAGS) -C vcsn-b all

libvcsn-r:
	@$(MAKE) $(AM_MAKEFLAGS) -C vcsn-r all

libvcsn-z:
	@$(MAKE) $(AM_MAKEFLAGS) -C vcsn-z all

libvcsn-z-max:
	@$(MAKE) $(AM_MAKEFLAGS) -C vcsn-z-max all

libvcsn-z-min:
	@$(MAKE) $(AM_MAKEFLAGS) -C vcsn-z-min all

libvcsn-fmp-tdc:
	@$(MAKE) $(AM_MAKEFLAGS) -C vcsn-fmp-tdc all

libvcsn-tdc:
	@$(MAKE) $(AM_MAKEFLAGS) -C vcsn-tdc all

libvcsn-z-fmp-tdc:
	@$(MAKE) $(AM_MAKEFLAGS) -C vcsn-z-fmp-tdc all

libvcsn-z-tdc:
	@$(MAKE) $(AM_MAKEFLAGS) -C vcsn-z-tdc all

