## CBS, a C++ benchmarking suite.
##
## Copyright (C) 2007, 2009 The CBS Authors.
##
## This program is free software; you can redistribute it and/or
## modify it under the terms of the Do What The Fuck You Want To
## Public License (WTFPL) version 2.
##
## The complete WTFPL license text can be found as the
## `COPYING' file in the root directory.
##
## The CBS Authors consists of people listed in the `AUTHORS' file.

include $(top_srcdir)/cbs.mk

nobase_include_HEADERS =			\
    cbs/bench/memplot.hh			\
    cbs/bench/bench.hh				\
    cbs/bench/bench_internals.hh		\
    cbs/bench/bench_macros.hh			\
    cbs/bench/timer.hh				\
    cbs/bench/timer.hxx				\
    cbs/bench/internal/timer_gathering.hh	\
    cbs/bench/internal/timer_gathering.hxx	\
    cbs/bench/internal/timer_graph.hh		\
    cbs/bench/internal/timer_graph.hxx
