## Vaucanson, a generic library for finite state machines.
## Copyright (C) 2007 The Vaucanson Group.
##
## This program is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License
## as published by the Free Software Foundation; either version 2
## of the License, or (at your option) any later version.
##
## The complete GNU General Public Licence Notice can be found as the
## `COPYING' file in the root directory.
##
## The Vaucanson Group consists of people listed in the `AUTHORS' file.

# elisp-comp cannot build files in subdirectories, so do not try to
# build these from the parent directory.
dist_lisp_LISP = rebox.el vaucanson.el
