
micaldir = $(includedir)/mical
nobase_mical_HEADERS = \
   internal/k_window.hxx			 \
   internal/k_window.hh				 \
   misc/traits.hh				 \
   fundamental/default_ops.hh			 \
   fundamental/meta_set.hh			 \
   fundamental/mix.hh				 \
   tools/predefs.hh				 \
   tools/load_sample.hxx			 \
   tools/load_sample.hh				 \
   algorithms/is_kreversible.hxx		 \
   algorithms/is_kreversible.hh			 \
   algorithms/is_kdeterministic.hxx		 \
   algorithms/is_kdeterministic.hh		 \
   algorithms/k_ri.hxx				 \
   algorithms/k_ri.hh				 \
   algorithms/k_tssi.hxx			 \
   algorithms/get_structcomp_sample.hxx		 \
   algorithms/get_structcomp_sample.hh		 \
   algorithms/mggi.hxx				 \
   algorithms/rig2.hh				 \
   algorithms/mggi.hh				 \
   algorithms/k_tssi.hh				 \
   algorithms/rig.hxx				 \
   algorithms/rig.hh				 \
   algorithms/make_pta.hxx			 \
   algorithms/make_pta.hh			 \
   algorithms/make_mca.hxx			 \
   algorithms/make_mca.hh			 \
   algorithms/is_structurally_complete.hxx	 \
   algorithms/is_structurally_complete.hh	 \
   algorithms/is_not_compatible.hxx		 \
   algorithms/is_not_compatible.hh		 \
   algorithms/fusion.hxx			 \
   algorithms/fusion.hh				 \
   algebra/concrete/k_words.hxx			 \
   algebra/concrete/k_words.hh			 \
   algebra/concrete/complete_lattice.hxx	 \
   algebra/concrete/complete_lattice.hh		 \
   algebra/concrete/ordered_set.hxx		 \
   algebra/concrete/ordered_set.hh		 \
   algebra/concrete/lattice.hxx			 \
   algebra/concrete/lattice.hh			 \
   algebra/concrete/complemented_lattice.hxx	 \
   algebra/concrete/complemented_lattice.hh	 \
   algebra/concept/k_monoid_base.hxx		 \
   algebra/concept/k_monoid_base.hh		 \
   algebra/concept/mix_base.hh			 \
   algebra/concept/complete_lattice_base.hh	 \
   algebra/concept/complete_lattice_base.hxx	 \
   algebra/concept/ordered_set_base.hxx		 \
   algebra/concept/ordered_set_base.hh		 \
   algebra/concept/lattice_base.hxx		 \
   algebra/concept/lattice_base.hh		 \
   algebra/concept/complemented_lattice_base.hxx \
   algebra/concept/complemented_lattice_base.hh


