INCLUDES = -I$(srcdir)/../include

check_PROGRAMS = bs fusion get_structcomp_sample is_not_compatible is_structurally_complete \
   k_deterministic k_ri k_tssi make_mca

bs_SOURCES = bs.cc
fusion_SOURCES = fusion.cc
get_structcomp_sample_SOURCES = get_structcomp_sample.cc
is_not_compatible_SOURCES = is_not_compatible.cc
is_structurally_complete_SOURCES = is_structurally_complete.cc
k_deterministic_SOURCES = k_deterministic.cc
k_ri_SOURCES = k_ri.cc
k_tssi_SOURCES = k_tssi.cc
make_mca_SOURCES = make_mca.cc

EXTRA_DIST = training/vtrain.toy
